# BlogAgenticAI

./: .cspell.json  .gitignore  app.py  langgraph.json  main.py  pyproject.toml  request.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blogstate.py
