[project]
name = "blogagentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "uvicorn>=0.42.0",
    "watchdog>=6.0.0",
]
